libs/extractor/tests/snapshots/all_tests__extract_advenced_selector-4.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Box} from '@devup-ui/core'\n        <Box _is={{\n          params: [\"\"],\n          _hover: {\n            bg: \"blue\"\n          }\n        }} />\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: false, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "blue",
                level: 0,
                selector: Some(
                    Selector(
                        "&:is():hover",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui-0.css\";\n<div className=\"a-a\" />;\n",
}
